--- a/pages/partials/movieModal.html
+++ b/pages/partials/movieModal.html
@@ -5,7 +5,7 @@
 	</div><!-- .modal-header -->
 	<div class="modal-body">
 		<div class="col-xs-6 col-sm-4 container-poster">
-			<img src="{{vm.movieNfo.imdb_poster}}" class="poster img-responsive" alt="">
+			<img ng-src="{{vm.movieNfo.imdb_poster}}" class="poster img-responsive" alt="">
 		</div><!-- .container-poster -->
 		<div class="col-xs-6 col-sm-8">
 			<!-- <h2 class="">{{vm.movieNfo.name}}</h2> -->
@@ -22,12 +22,14 @@
 			</div><!-- -col-xs-6 -->
 			<div class="col-xs-12">
 				<p class="plot">{{vm.movieNfo.plot}}</p>
+				<p class="id">{{vm.movieNfo.imdb_id}}</p>
+				<p>Hej funka då för i HELVETE!</p>
 			</div><!-- .container-plot -->
 		</div><!-- .col-sm-8 -->
 		<div class="clearfix"></div>
 	</div><!-- .modal-body -->
 	<div class="modal-footer">
 		<button class="btn btn-danger" ng-click="vm.cancel()">Avbryt</button>
-		<button class="btn btn-success" ng-click="vm.ok()">Sett</button>
+		<button class="btn btn-success" ng-click="vm.ok(vm.movieNfo.imdb_id)">Sett</button>
 	</div><!-- .modal-footer -->
 </div><!-- #movieModal -->
