--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -30,7 +30,11 @@
 
 .modal-backdrop {
 	height: 100%;
-	background-color: rgba(0,0,0, .6);
+	background-color: rgb(0,0,0);
+}
+
+.modal-backdrop.in {
+	opacity: .9;
 }
 
 #movieModal {
