Rating system, refresh homeCtrl, alerts

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -56,3 +56,42 @@
 .in {
 	transition: 200ms;
 }
+
+/*******************************************
+**					Alerts
+*******************************************/
+.alert {
+	position: fixed;
+	top: 10px;
+	right: 5px;
+	z-index: 9;
+	width: 50%;
+	transition: all 200ms ease-in-out;
+}
+
+
+/*******************************************
+**					Index
+*******************************************/
+// html, body {
+// 	height: 100vh;
+// }
+
+
+/*******************************************
+**					Movie Lists
+*******************************************/
+
+
+// header {
+// 	height: 20vh;
+// }
+
+// #lists {
+// 	height: 80vh;
+
+// 	.list {
+// 		height: 80vh;
+// 		overflow-y: scroll;
+// 	}
+// }
