--- a/scss/_watchlist.scss
+++ b/scss/_watchlist.scss
@@ -5,6 +5,34 @@
 
 header {
 	height: 15vh;
+	overflow: hidden;
+	position: relative;
+	// background-color: black;
+
+	.background-header {
+		z-index: -1;
+		position: fixed;
+		top: 0;
+		width: 110%;
+		height: inherit;
+		
+		overflow: hidden;
+
+		.poster-header {
+			display: inline-block;
+			height: 50%;
+			width: auto;
+		}
+	}
+
+	h1 {
+		z-index: 10;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		margin: 0;
+	}
 }
 
 
